Atualizar o cadastro.html

--- a/cadastro.html
+++ b/cadastro.html
@@ -311,8 +311,8 @@
 <div id="toast"></div>
 
 <script>
-const SUPABASE_URL = 'https://SEU_PROJETO.supabase.co';
-const SUPABASE_ANON_KEY = 'SUA_ANON_KEY_AQUI';
+const SUPABASE_URL = 'https://hzpbsvddutdpckfoohuu.supabase.co';
+const SUPABASE_ANON_KEY = 'sb_publishable_S4z9oNt3unnEc-3d958zQw_1cyZPWH1';
 const { createClient } = supabase;
 const sb = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
