--- a/login.html
+++ b/login.html
@@ -136,8 +136,8 @@
 
 <div id="toast"></div>
 <script>
-const SB_URL='https://SEU_PROJETO.supabase.co';
-const SB_KEY='SUA_ANON_KEY_AQUI';
+const SB_URL='https://hzpbsvddutdpckfoohuu.supabase.co';
+const SB_KEY='sb_publishable_S4z9oNt3unnEc-3d958zQw_1cyZPWH1';
 const {createClient}=supabase;
 const sb=createClient(SB_URL,SB_KEY);
 const params=new URLSearchParams(window.location.search);
